kcms/colors: make sure the preview uses the right colours

BUG: 456648